Maven demo: Add newly required --add-exports java.base/jdk.internal.misc=jdk.graal.compiler.